# FieldML-API

./: .hgignore  .hgtags  .project  CMakeLists.txt  CheckApi.py  ExtractStrings.py  FieldML_0.4.xsd  FieldML_0.5.xsd  FieldML_Library.xml  FieldML_Library_0.4.xml  FieldML_Library_0.5.xml  Fieldml.xsd  Fieldml_0.3.xsd  FileToString.py  JavaBindings.cmake  build.sh  library_0.3.xml  library_opencmiss_0.3.xml
Fortran/: InterfaceGen.py
cmake/: FortranBindings.cmake
core/: CMakeLists.txt
core/src/: ArrayDataReader.h  ArrayDataWriter.cpp  ArrayDataWriter.h  ErrorContextAutostack.cpp  ErrorContextAutostack.h  Evaluators.cpp  Evaluators.h  FieldmlDOM.cpp  FieldmlDOM.h  FieldmlErrorHandler.h  FieldmlRegion.cpp  FieldmlSession.cpp  FieldmlSession.h  Hdf5ArrayDataReader.cpp  Hdf5ArrayDataWriter.cpp  Hdf5ArrayDataWriter.h  ImportInfo.cpp  ImportInfo.h  InputStream.h  ObjectStore.cpp  ObjectStore.h  SimpleBitset.h  SimpleMap.h  String_InternalLibrary.cpp  String_InternalXSD.cpp  String_InternalXSD.h  TextArrayDataReader.cpp  TextArrayDataReader.h  TextArrayDataWriter.cpp  fieldml_api.cpp  fieldml_api.h  fieldml_structs.cpp  fieldml_structs.h  fieldml_write.cpp  string_const.cpp  string_const.h
io/: CMakeLists.txt
io/src/: ArrayDataReader.cpp  ArrayDataReader.h  ArrayDataWriter.cpp  ArrayDataWriter.h  FieldmlIoApi.cpp  FieldmlIoApi.h  FieldmlIoContext.h  FieldmlIoSession.cpp  FieldmlIoSession.h  Hdf5ArrayDataReader.cpp  Hdf5ArrayDataReader.h  Hdf5ArrayDataWriter.cpp  Hdf5ArrayDataWriter.h  InputStream.cpp  InputStream.h  OutputStream.cpp  OutputStream.h  StringUtil.cpp  StringUtil.h  TextArrayDataReader.cpp  TextArrayDataReader.h  TextArrayDataWriter.cpp  TextArrayDataWriter.h
jni/: fieldml_api.i  fieldml_io.i  readme.swig
lib/src/: ArrayDataReader.cpp  ArrayDataWriter.cpp  ArrayDataWriter.h  FieldmlDOM.cpp  FieldmlErrorHandler.h  FieldmlRegion.h  FieldmlSession.cpp  FieldmlSession.h  Hdf5ArrayDataReader.cpp  Hdf5ArrayDataReader.h  Hdf5ArrayDataWriter.cpp  Hdf5ArrayDataWriter.h  ImportInfo.cpp  InputStream.cpp  InputStream.h  ObjectStore.cpp  OutputStream.cpp  OutputStream.h  SimpleBitset.cpp  SimpleMap.h  String_InternalLibrary.cpp  String_InternalXSD.cpp  TextArrayDataReader.cpp  TextArrayDataReader.h  TextArrayDataWriter.cpp  TextArrayDataWriter.h  Util.h  fieldml_api.cpp  fieldml_api.h  fieldml_structs.cpp  fieldml_structs.h  fieldml_write.cpp  fieldml_write.h  string_const.cpp  string_const.h
src/: ArrayDataReader.cpp  ArrayDataReader.h  ArrayDataWriter.cpp  ArrayDataWriter.h  DataReader.cpp  DataReader.h  DataWriter.cpp  DataWriter.h  FieldmlDOM.cpp  FieldmlErrorHandler.h  FieldmlRegion.cpp  FieldmlRegion.h  FieldmlSession.cpp  FieldmlSession.h  Hdf5ArrayDataReader.cpp  Hdf5ArrayDataReader.h  Hdf5ArrayDataWriter.cpp  Hdf5ArrayDataWriter.h  ImportInfo.cpp  ImportInfo.h  InputStream.cpp  InputStream.h  ObjectStore.cpp  ObjectStore.h  OutputStream.cpp  OutputStream.h  ParameterReader.cpp  ParameterReader.h  ParameterWriter.cpp  ParameterWriter.h  Region.cpp  Region.h  SaxHandlers.cpp  SaxHandlers.h  SimpleBitset.cpp  SimpleBitset.h  SimpleMap.h  StreamDataReader.cpp  StreamDataReader.h  StreamDataWriter.cpp  (+25 more)
test/: CMakeLists.txt
test/input/: I16BE.h5
test/output/: visualisation.cmiss
test/src/: FieldmlTestArrayReading.cpp  FieldmlTestCreate.cpp  SimpleTest.cpp  SimpleTest.h  fieldml_phdf5_test.cpp  fieldml_test.cpp
